# LearnSpdlog

./: CMakeLists.txt  README.md  api.md  bench.md  common_func.cpp  common_func.h  example.cpp  fatdog.cpp  fatdog.h  fmt.md  formatter.cpp  formatter.h  log_event.cpp  log_event.h  logger.cpp  logger.h  registry.cpp  registry.h  synchronous_factory.h  type.h
bench/: CMakeLists.txt  bench.cpp
sinks/: sink.h  stdout_sinks.cpp  stdout_sinks.h
test/: CMakeLists.txt  includes.h  test.cpp
